fixed number pad functionality, grid visibility on mobile, font size differences on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -163,7 +163,8 @@ body {
   transition: background-color 0.2s;
 }
 
-.puzzle input {
+.puzzle input,
+.puzzle div {
   width: 100%;
   height: 100%;
   text-align: center;
@@ -213,7 +214,6 @@ body {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
-  font-size: 10px;
   color: var(--pencil-marks);
   pointer-events: none;
 }
@@ -222,6 +222,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  font-size: 10px !important;
 }
 
 .puzzle td.highlight-focus {
@@ -462,7 +463,11 @@ button.hamburger:hover {
 
   .puzzle input,
   .puzzle div {
-    font-size: 18px;
+    font-size: 21px;
+  }
+
+  .pencil-mark {
+    font-size: 10px !important;
   }
 }
 
@@ -585,11 +590,11 @@ button.hamburger:hover {
   .number-pad-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 8px;
+    gap: 10px;
   }
 
   .number-button {
-    padding: 15px;
+    padding: 8px;
     font-size: 1.2em;
     border: 1px solid var(--grid-border);
     background: var(--bg-color);
@@ -602,9 +607,9 @@ button.hamburger:hover {
   }
 
   .pencil-mode-toggle {
-    width: 100%;
+    width: 90%;
     padding: 12px;
-    margin-top: 8px;
+    /* margin-top: 8px; */
     border: 1px solid var(--grid-border);
     background: var(--bg-color);
     color: var(--text-color);
